# gRpcDemo

./: .gitignore  CMakeLists.txt  README.MD
cpp/: CMakeLists.txt  client.cpp
java/: pom.xml
java/src/main/java/com/iamteer/demo/: Client.java  Main.java
proto/: demo.proto  wcf.proto
python/: client.py  main.py
server/: CMakeLists.txt  main.cpp  server.hpp
src/: client.cpp  main.cpp  server.cpp  server.hpp
